feat: add feign clients, circuit breakers